objects/Parcel__c.object
<CustomObject>
    <fields>
        <fullName>AC_Recording_Date__c</fullName>
        <inlineHelpText>The date the assessment contract was recorded.</inlineHelpText>
        <label>AC Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <inlineHelpText>The taxing authority agency name</inlineHelpText>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Payment__c</fullName>
        <formula>Total_Cost_P_I_Fees__c/Opportunity__r.Loan_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total annual bond payment [(P+I)/Term] excludes Cap I</inlineHelpText>
        <label>Annual Bond Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Tax_Payment__c</fullName>
        <formula>(Bond_Total__c+Interest__c+Total_Fees__c)/Opportunity__r.Loan_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(P+I+Fees)/Term (excludes Cap I)</inlineHelpText>
        <label>Annual Tax Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Contract__c</fullName>
        <inlineHelpText>This is the assessment contract.</inlineHelpText>
        <label>Assessment Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bond_Counsel_Disbursement__c</fullName>
        <label>Bond Counsel Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Total__c</fullName>
        <inlineHelpText>The Principal payment that this parcel contributes to the bond.</inlineHelpText>
        <label>Bond Total</label>
        <summarizedField>Payments__c.Payment__c</summarizedField>
        <summaryForeignKey>Payments__c.Parcel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bond__c</fullName>
        <formula>HYPERLINK(&quot;https://na16.salesforce.com/&quot;&amp;Opportunity__r.Bond__r.Id,Opportunity__r.Bond__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the bone</inlineHelpText>
        <label>Bond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capitalized_Interest__c</fullName>
        <inlineHelpText>Total of Capitalized Interest</inlineHelpText>
        <label>Capitalized Interest</label>
        <summarizedField>Payments__c.Interest__c</summarizedField>
        <summaryFilterItems>
            <field>Payments__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>Capitalized Interest</value>
        </summaryFilterItems>
        <summaryForeignKey>Payments__c.Parcel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CleanFund_Admin_Disbursement__c</fullName>
        <label>CleanFund Admin Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CleanFund_Assessment_Servicing_Fee__c</fullName>
        <label>CleanFund Assessment Servicing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CleanFund_Origination_Disbursement__c</fullName>
        <label>CleanFund Origination Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Issuance__c</fullName>
        <label>Cost of Issuance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County_Assessment_Servicing_Fee__c</fullName>
        <label>County Assessment Servicing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County_Fees__c</fullName>
        <inlineHelpText>Fees going to the county</inlineHelpText>
        <label>County Fees</label>
        <summarizedField>Payments__c.County_Fee__c</summarizedField>
        <summaryForeignKey>Payments__c.Parcel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <label>FIPS</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Tax_Year__c</fullName>
        <inlineHelpText>The year the assessment starts.</inlineHelpText>
        <label>Initial Tax Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <inlineHelpText>This represents the total interest.</inlineHelpText>
        <label>Interest</label>
        <summarizedField>Payments__c.Interest__c</summarizedField>
        <summaryFilterItems>
            <field>Payments__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>P &amp; I</value>
        </summaryFilterItems>
        <summaryForeignKey>Payments__c.Parcel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Notes on the Assesment</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>Opportunity_Parcels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Assessment_Servicing_Fee__c</fullName>
        <label>Other Assessment Servicing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepayment_Terms__c</fullName>
        <label>Prepayment Terms</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Sponsor_Disbursement__c</fullName>
        <label>Program Sponsor Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recordation_Disbursement__c</fullName>
        <label>Recordation Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reserve__c</fullName>
        <label>Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Admin_Assessment_Servicing_Fee__c</fullName>
        <label>Tax Admin Assessment Servicing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Admin_Disbursement__c</fullName>
        <label>Tax Admin Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Admin_Fee__c</fullName>
        <inlineHelpText>This represents the total of the tax admin fees</inlineHelpText>
        <label>Tax Admin Fee</label>
        <summarizedField>Payments__c.Tax_Admin_Fee__c</summarizedField>
        <summaryForeignKey>Payments__c.Parcel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Bond_Cost_Cap_I__c</fullName>
        <formula>Total_Cost_P_I_Fees__c+Capitalized_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>P+I+Cap I</inlineHelpText>
        <label>Total Bond Cost + Cap I</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cap_I__c</fullName>
        <formula>County_Fees__c+Bond_Total__c+Interest__c+Tax_Admin_Fee__c+Trustee_Fees__c+ Capitalized_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Principal, Interest, Cap I, Fees</inlineHelpText>
        <label>Total + Cap I + Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_P_I_Fees__c</fullName>
        <formula>Bond_Total__c+Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Bond Cost not including capitalized interest or fees.</inlineHelpText>
        <label>Total Bond Cost (P+I)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <formula>County_Fees__c+ Trustee_Fees__c+ Tax_Admin_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Fees for the Tax Assessment</inlineHelpText>
        <label>Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trustee_Assessment_Servicing_Fee__c</fullName>
        <label>Trustee Assessment Servicing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trustee_Disbursement__c</fullName>
        <label>Trustee Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trustee_Fees__c</fullName>
        <inlineHelpText>This is the total for the trustee fees</inlineHelpText>
        <label>Trustee Fees</label>
        <summarizedField>Payments__c.Trustee_Fee__c</summarizedField>
        <summaryForeignKey>Payments__c.Parcel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Parcel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>APN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>